Move close button slightly to the left to avoid overlap with scroll bar

--- a/Extensions/AskExpertExtension/pebl-askExpert-widget.css
+++ b/Extensions/AskExpertExtension/pebl-askExpert-widget.css
@@ -30,7 +30,7 @@
 .askExpertCloseButton {
 	position: fixed;
     top: 0;
-    right: 0;
+    right: 1em;
     z-index: 5001;
     font-size: 2em;
     cursor: pointer;
