--- a/Extensions/KnowledgeNetworkExtension/pebl-knowledgeNetwork-widget.css
+++ b/Extensions/KnowledgeNetworkExtension/pebl-knowledgeNetwork-widget.css
@@ -30,7 +30,7 @@
 .registryCloseButton {
 	position: fixed;
     top: 0;
-    right: 0;
+    right: 1em;
     z-index: 5001;
     font-size: 2em;
     cursor: pointer;
